--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
         <h2 class="text-3xl font-bold text-center text-teal-700 mb-6">PyleaMUN ID Badge Creator</h2>
 
         <div class="input-forms-wrapper">
-            <!-- Delegate 1 Form -->
+            <!-- Officer 1 Form -->
             <div class="input-form">
-                <h3 class="text-xl font-bold text-teal-700 mb-4">Delegate 1 Details</h3>
+                <h3 class="text-xl font-bold text-teal-700 mb-4">Officer  1 Details</h3>
                 <form id="badgeForm1">
                     <div class="mb-4">
                         <label for="nameInput1" class="block mb-1 font-medium">Name:</label>
@@ -252,9 +252,9 @@
                 </form>
             </div>
 
-            <!-- Delegate 2 Form -->
+            <!-- Officer 2 Form -->
             <div class="input-form">
-                <h3 class="text-xl font-bold text-teal-700 mb-4">Delegate 2 Details</h3>
+                <h3 class="text-xl font-bold text-teal-700 mb-4">Officer 2 Details</h3>
                 <form id="badgeForm2">
                     <div class="mb-4">
                         <label for="nameInput2" class="block mb-1 font-medium">Name:</label>
@@ -271,9 +271,9 @@
                 </form>
             </div>
 
-            <!-- Delegate 3 Form -->
+            <!-- Officer  3 Form -->
             <div class="input-form">
-                <h3 class="text-xl font-bold text-teal-700 mb-4">Delegate 3 Details</h3>
+                <h3 class="text-xl font-bold text-teal-700 mb-4">Officer  3 Details</h3>
                 <form id="badgeForm3">
                     <div class="mb-4">
                         <label for="nameInput3" class="block mb-1 font-medium">Name:</label>
@@ -290,9 +290,9 @@
                 </form>
             </div>
 
-            <!-- Delegate 4 Form -->
+            <!-- Officer  4 Form -->
             <div class="input-form">
-                <h3 class="text-xl font-bold text-teal-700 mb-4">Delegate 4 Details</h3>
+                <h3 class="text-xl font-bold text-teal-700 mb-4">Officer  4 Details</h3>
                 <form id="badgeForm4">
                     <div class="mb-4">
                         <label for="nameInput4" class="block mb-1 font-medium">Name:</label>
@@ -316,7 +316,7 @@
 
         <h3 class="text-2xl font-bold text-center text-teal-700 mt-8 mb-4">Live Previews</h3>
         <div class="live-previews-wrapper">
-            <!-- Delegate 1 Preview -->
+            <!-- Officer  1 Preview -->
             <div id="liveBadgePreview1" class="badge-container">
                 <img src="logo.png" alt="PyleaMUN Logo" class="badge-logo">
                 <img src="PyleaMUN Programme.png" alt="PyleaMUN Programme Logo" class="badge-program-logo">
@@ -328,7 +328,7 @@
                 <div class="badge-footer">PyleaMUN</div>
             </div>
 
-            <!-- Delegate 2 Preview -->
+            <!-- Officer  2 Preview -->
             <div id="liveBadgePreview2" class="badge-container">
                 <img src="logo.png" alt="PyleaMUN Logo" class="badge-logo">
                 <img src="PyleaMUN Programme.png" alt="PyleaMUN Programme Logo" class="badge-program-logo">
@@ -340,7 +340,7 @@
                 <div class="badge-footer">PyleaMUN</div>
             </div>
 
-            <!-- Delegate 3 Preview -->
+            <!-- Officer  3 Preview -->
             <div id="liveBadgePreview3" class="badge-container">
                 <img src="logo.png" alt="PyleaMUN Logo" class="badge-logo">
                 <img src="PyleaMUN Programme.png" alt="PyleaMUN Programme Logo" class="badge-program-logo">
@@ -352,7 +352,7 @@
                 <div class="badge-footer">PyleaMUN</div>
             </div>
 
-            <!-- Delegate 4 Preview -->
+            <!-- Officer  4 Preview -->
             <div id="liveBadgePreview4" class="badge-container">
                 <img src="logo.png" alt="PyleaMUN Logo" class="badge-logo">
                 <img src="PyleaMUN Programme.png" alt="PyleaMUN Programme Logo" class="badge-program-logo">
@@ -378,14 +378,14 @@
         }
 
         // Update preview function
-        function updatePreview(delegateNum) {
-            const data = inputs[delegateNum];
-            const preview = document.getElementById(`liveBadgePreview${delegateNum}`);
+        function updatePreview(Officer Num) {
+            const data = inputs[Officer Num];
+            const preview = document.getElementById(`liveBadgePreview${Officer Num}`);
             
             if (preview) {
                 preview.querySelector('.badge-name').textContent = data.name.value || 'NAME SURNAME';
                 preview.querySelector('.badge-role').textContent = data.role.value || 'ROLE';
-                document.getElementById(`badgeSchoolValue${delegateNum}`).textContent = data.school.value || 'Your School';
+                document.getElementById(`badgeSchoolValue${Officer Num}`).textContent = data.school.value || 'Your School';
             }
         }
 
